--- a/MVVMMapDiagram/DemoApp/Window1.xaml
+++ b/MVVMMapDiagram/DemoApp/Window1.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="DemoApp.Window1"
+﻿<Window x:Class="MapDiagram.Window1"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:s="clr-namespace:DiagramDesigner;assembly=DiagramDesigner"
-        xmlns:local="clr-namespace:DemoApp"
+        xmlns:local="clr-namespace:MapDiagram"
         WindowState="Maximized"
         SnapsToDevicePixels="True"
 		Title="EditorTransportNetwork"        
