--- a/MVVMMapDiagram/DemoApp/App.xaml
+++ b/MVVMMapDiagram/DemoApp/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="DemoApp.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006" d1p1:Ignorable="d" StartupUri="Window1.xaml">
+<Application x:Class="MapDiagram.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006" d1p1:Ignorable="d" StartupUri="Window1.xaml">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
@@ -19,14 +19,10 @@
         </ResourceDictionary>
         <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/DesignerStyle.xaml">
         </ResourceDictionary>
-        <!--  Common DemoApp Styles  -->
+        <!--  Common Styles  -->
         <ResourceDictionary Source="Resources/Styles.xaml">
         </ResourceDictionary>
         <!--  specific designer items, you should have one of these per ViewModel that you want to represent on diagram  -->
-        <ResourceDictionary Source="Resources/DesignerItems/SettingsDesignerItemDataTemplate.xaml">
-        </ResourceDictionary>
-        <ResourceDictionary Source="Resources/DesignerItems/PersistDesignerItemDataTemplate.xaml">
-        </ResourceDictionary>
         <ResourceDictionary Source="Resources/DesignerItems/InternalNodeItemDataTemplate.xaml">
         </ResourceDictionary>
         <ResourceDictionary Source="Resources/DesignerItems/LaneItemDataTemplate.xaml">
