--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/InternalNodeItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/InternalNodeItemDataTemplate.xaml
@@ -1,18 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DemoApp">
+                    xmlns:local="clr-namespace:MapDiagram">
 
 
     <!-- DataTemplate for DesignerCanvas look and feel -->
-    <DataTemplate DataType="{x:Type local:PersistDesignerItemViewModel}">
+    <DataTemplate DataType="{x:Type local:InternalNodeItemViewModel}">
         <Grid>
             <Image IsHitTestVisible="False"
                    Stretch="Fill"
-                   Source="../../Images/lineGroupPanel.png"
+                   Source="../../Images/internalNodePanel.png"
                    Tag="setting"
                    Opacity="0.6"/>
-            <Button HorizontalAlignment="Right" Content="HostUrl"
-                    VerticalAlignment="Bottom"
+            <Button Content="HostUrl"       
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
                     Margin="5"
                     Template="{StaticResource infoButtonTemplate}" 
                     Command="{Binding ShowDataChangeWindowCommand}" />
@@ -20,21 +21,14 @@
     </DataTemplate>
 
     <!-- DataTemplate for Popup look and feel -->
-    <DataTemplate DataType="{x:Type local:PersistDesignerItemData}">
+    <DataTemplate DataType="{x:Type local:InternalNodeItemData}">
         <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <Label Grid.Row="0"
-                   Content="HostUrl"
-                   Margin="5" />
-            <TextBox Grid.Row="1"
-                    HorizontalAlignment="Left"
-                    Text="{Binding HostUrl}"
-                    Width="150"
-                    Margin="5" />
+            <TabControl TabStripPlacement="Left" Canvas.ZIndex="0">
+                <TabItem Header="test"></TabItem>
+                <TabItem Header="test"></TabItem>
+                <TabItem Header="test"></TabItem>
+                <TabItem Header="test"></TabItem>
+            </TabControl>
         </Grid>
     </DataTemplate>
 
