--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupItemDataTemplate.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DemoApp">
+                    xmlns:local="clr-namespace:MapDiagram">
 
 
     <!-- DataTemplate for DesignerCanvas look and feel -->
@@ -11,12 +11,13 @@
                    Source="../../Images/lineGroupPanel.png"
                    Opacity="0.6"
                    Tag="setting" />
-            
-            <Button HorizontalAlignment="Right" Content="HostUrl"
-                    VerticalAlignment="Bottom"
-                    Margin="5"
-                    Template="{StaticResource infoButtonTemplate}" 
-                    Command="{Binding ShowDataChangeWindowCommand}" />
+
+            <Button     
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Margin="5"
+                Template="{StaticResource infoButtonTemplate}" 
+                Command="{Binding ShowDataChangeWindowCommand}" />
         </Grid>
     </DataTemplate>
 
