--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/ODConnectorItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/ODConnectorItemDataTemplate.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:DemoApp">
+    xmlns:local="clr-namespace:MapDiagram">
 
 
     <!--  DataTemplate for DesignerCanvas look and feel  -->
@@ -13,11 +13,11 @@
                 Opacity="0.6"
                 Stretch="Fill"
                 Tag="setting" />
-            
-            <Button
+
+            <Button     
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
                 Margin="5"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
                 Command="{Binding ShowDataChangeWindowCommand}"
                 Content="HostUrl"
                 Template="{StaticResource infoButtonTemplate}" />
